[package]
name = "hyperspeed"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ftl-protocol = { path = "crates/ftl" }
hyperspeed-broadcast = { path = "crates/broadcast" }

once_cell = "1.8.0"
async-trait = "0.1.50"
pretty_env_logger = "0.4"
async-std = { version = "1.8.0", features = ["attributes"] }
