[package]
name = "hyperspeed-broadcast"
description = "Media ingest server, also provides WebSocket signaling server."
homepage = "https://project-hyperspeed.vercel.app"
documentation = "https://project-hyperspeed.vercel.app/components/broadcast"
repository = "https://github.com/insertish/project-hyperspeed"
version = "0.0.1"
license = "AGPL-3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
rtc = [ "once_cell", "mediasoup" ]
ingest = [ "rtc", "async-trait", "async-std", "rtp", "webrtc-util" ]
signaling = [ "rtc", "futures", "async-std", "async-trait", "async-tungstenite", "serde", "serde_json" ]
default = [ "rtc", "ingest", "signaling" ]

[dependencies]
log = "0.4"
ftl-protocol = { path = "../ftl" }

# misc
futures = { version = "0.3.15", optional = true }
once_cell = { version = "1.8.0", optional = true }

# async std
async-trait = { version = "0.1.50", optional = true }
async-std = { version = "1.8.0", features = ["attributes", "unstable"], optional = true }
async-tungstenite = { version = "0.14.0", features = ["async-std-runtime"], optional = true }

# serde
serde_json = { version = "1.0.64", optional = true }
serde = { version = "1.0.126", features = ["derive"], optional = true }

# WebRTC
rtp = { version = "0.2.9", optional = true }
mediasoup = { version = "0.8.2", optional = true }
webrtc-util = { version = "0.2.4", optional = true }
