[package]
name = "hyperspeed-broadcast"
description = "FTL media ingest server and WebSocket signaling server."
homepage = "https://hyperspeed.cli.rs"
documentation = "https://hyperspeed.cli.rs/components/broadcast"
repository = "https://github.com/insertish/project-hyperspeed"
version = "0.0.10"
license = "AGPL-3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
rtc = [ "once_cell", "mediasoup" ]
ingest = [ "rtc", "async-trait", "async-std", "rtp", "webrtc-util", "bytes", "lazy_static", "nanoid" ]
signaling = [ "rtc", "futures", "async-std", "async-trait", "async-tungstenite", "serde", "serde_json" ]
default = [ "rtc", "ingest", "signaling" ]

[dependencies]
# ftl-protocol = { path = "../ftl" }
ftl-protocol = "0.0.4"

# misc
log = "0.4"
bytes = { version = "1.1.0", optional = true }
nanoid = { version = "0.4.0", optional = true }
futures = { version = "0.3.15", optional = true }
once_cell = { version = "1.8.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }

# async std
async-trait = { version = "0.1.50", optional = true }
async-std = { version = "1.8.0", features = ["attributes", "unstable"], optional = true }
async-tungstenite = { version = "0.16.1", features = ["async-std-runtime"], optional = true }

# serde
serde_json = { version = "1.0.64", optional = true }
serde = { version = "1.0.126", features = ["derive"], optional = true }

# WebRTC
rtp = { version = "0.6.5", optional = true }
mediasoup = { version = "0.9.2", optional = true }
webrtc-util = { version = "0.5.3", optional = true }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]
