[package]
name = "ftl-protocol"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
server = [ "log", "async-trait", "async-std", "util" ]
util = [ "ring", "rand", "hex" ]

[dependencies]
# server only
log = { version = "0.4", optional = true }
async-trait = { version = "0.1.50", optional = true }
async-std = { version = "1.8.0", features = ["attributes"], optional = true }

# util only
ring = { version = "0.16.20", optional = true }
rand = { version = "0.8.4", optional = true }
hex = { version = "0.4.3", optional = true }
