[package]
name = "ftl-protocol"
description = "Common data structures for working with the Faster Than Light protocol as well as an optional FTL ingest control server."
homepage = "https://hyperspeed.cli.rs"
documentation = "https://hyperspeed.cli.rs/components/ftl"
repository = "https://github.com/insertish/project-hyperspeed"
version = "0.0.2"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
server = [ "log", "async-trait", "async-std", "util" ]
util = [ "ring", "rand", "hex" ]

[dependencies]
# server only
log = { version = "0.4", optional = true }
async-trait = { version = "0.1.50", optional = true }
async-std = { version = "1.8.0", features = ["attributes"], optional = true }

# util only
ring = { version = "0.16.20", optional = true }
rand = { version = "0.8.4", optional = true }
hex = { version = "0.4.3", optional = true }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]
